--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
         "illuminate/filesystem": "^8.68",
         "monolog/monolog": "^2.3",
         "symfony/var-dumper": "^5.3",
-        "illuminate/events": "^8.69"
+        "illuminate/events": "^8.69",
+        "illuminate/database": "^8.68"
     },
 
     "require-dev": {
         "swoole/ide-helper": "@dev",
         "phpunit/phpunit": "^9.5",
-        "phpbench/phpbench": "^1.1",
-        "illuminate/database": "^8.68"
+        "phpbench/phpbench": "^1.1"
     },
 
     "autoload": {
