优化任务执行判断条件

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "ext-json": "*",
         "filp/whoops": "^2.14",
+        "illuminate/support": "^8.69",
         "illuminate/validation": "^8.68",
         "illuminate/translation": "^8.68",
         "illuminate/filesystem": "^8.68",
