--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
 
     "require": {
+        "php": "^7.4|^8.0",
         "ext-json": "*",
         "filp/whoops": "^2.14",
         "illuminate/support": "^8.69",
